Add required packages

--- a/UnityConnect/Packages/manifest.json
+++ b/UnityConnect/Packages/manifest.json
@@ -2,8 +2,18 @@
   "dependencies": {
     "com.unity.collab-proxy": "2.5.2",
     "com.unity.feature.2d": "2.0.1",
-    "com.unity.ide.rider": "3.0.31",
+    "com.unity.ide.rider": "3.0.34",
     "com.unity.ide.visualstudio": "2.0.22",
+    "com.unity.multiplayer.tools": "1.1.1",
+    "com.unity.netcode.gameobjects": "1.10.0",
+    "com.unity.services.friends": "1.1.0",
+    "com.unity.services.lobby": "1.2.2",
+    "com.unity.services.moderation": "1.0.1",
+    "com.unity.services.multiplay": "1.2.5",
+    "com.unity.services.multiplayer": "1.0.1",
+    "com.unity.services.push-notifications": "4.0.0",
+    "com.unity.services.relay": "1.1.1",
+    "com.unity.services.user-reporting": "2.0.11",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.6",
